modules/vpc/main.tf
resource "aws_security_group" "my_sg" {
  name   = "my_sg"
  vpc_id = aws_vpc.main.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
resource "aws_vpc" "main" {
    cidr_block = "10.0.0.0/16"

    tags ={
        Name = "my_vpc"
    }
  
}
resource "aws_subnet" "public_subnet" {
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.1.0/24"
    availability_zone = "us-east-1a"
    map_public_ip_on_launch = true

    tags= {
        Name ="public_subnet"

    }
  
}
resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.main.id

    tags={
        Name ="my-igw"
    } 
}
resource "aws_route_table" "public_rt" {
    vpc_id = aws_vpc.main.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id
    }
    tags = {
      Name="public-rt"
    }
  
}
resource "aws_route_table_association" "public_assoc" {
    subnet_id = aws_subnet.public_subnet.id
    route_table_id = aws_route_table.public_rt.id
  
}
resource "aws_subnet" "private_subnet" {
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.2.0/24"
    availability_zone = "us-east-1a"

    tags = {
      Name = "Private_Subnet"
    }
}
resource "aws_eip" "nat_eip" {
    domain = "vpc"
  
}
resource "aws_nat_gateway" "nat" {
    allocation_id = aws_eip.nat_eip.id
    subnet_id = aws_subnet.private_subnet.id

    tags = {
      Name = "Nat_Gateway"
    }
  
}
resource "aws_route_table" "private_rt"{
    vpc_id = aws_vpc.main.id

    route {
        cidr_block= "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.nat.id
    }
    tags = {
      Name = "private_rt"
    }
}
resource "aws_route_table_association" "private_rt_assoc" {
    subnet_id = aws_subnet.private_subnet.id
    route_table_id = aws_route_table.private_rt.id
  
}
